--- a/microservice-produits/src/main/resources/bootstrap.properties
+++ b/microservice-produits/src/main/resources/bootstrap.properties
@@ -1,8 +1,10 @@
 spring.application.name=microservice-produits
-spring.cloud.config.uri=http://localhost:9101
+#spring.cloud.config.uri=http://localhost:9101
 #management.endpoints.web.exposure.include=*
 info.app.version=1.0-Beta
 management.endpoints.web.exposure.include=health,info,metrics,beans,env
+spring.cloud.config.uri=http://localhost:9101
+eureka.instance.health-check-url-path= /actuator/health
 
 
 
