--- a/microservice-produits/pom.xml
+++ b/microservice-produits/pom.xml
@@ -87,7 +87,16 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<jvm>${env.JAVA_HOME}/bin/java</jvm>
+				</configuration>
+			</plugin>
 		</plugins>
+
 	</build>
 	<repositories>
 		<repository>
