--- a/Kubernetes/microservice-produits.yml
+++ b/Kubernetes/microservice-produits.yml
@@ -21,3 +21,17 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 9001
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: microservice-produits-app
+spec:
+  selector:
+    app: microservice-produits-app
+  ports:
+    - port: 80
+      targetPort: 9001         
