--- a/Kubernetes/clientui.yml
+++ b/Kubernetes/clientui.yml
@@ -22,3 +22,15 @@ spec:
           ports:
             - containerPort: 8080
          
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: clientui-app
+spec:
+  selector:
+    app: clientui-app
+  ports:
+    - port: 80
+      targetPort: 8080                  
