--- a/Kubernetes/config-service.yml
+++ b/Kubernetes/config-service.yml
@@ -22,3 +22,15 @@ spec:
           ports:
             - containerPort: 9101
          
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: config-service-app
+spec:
+  selector:
+    app: config-service-app
+  ports:
+    - port: 80
+      targetPort: 9101         
