--- a/Kubernetes/eureka-server.yml
+++ b/Kubernetes/eureka-server.yml
@@ -19,3 +19,29 @@ spec:
   ports:
     - port: 9102
       name: eureka   
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: eureka
+spec:
+  serviceName: "eureka"
+  replicas: 1
+  selector:
+    matchLabels:
+      app: eureka
+  template:
+    metadata:
+      labels:
+        app: eureka
+    spec:
+      containers:
+        - name: eureka
+          image: chabrik/eurekaserver
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 9102
+---
+           
+              
+         
