--- a/Kubernetes/microservice-produits.yml
+++ b/Kubernetes/microservice-produits.yml
@@ -27,6 +27,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: microservice-produits-app 
   labels:
     name: microservice-produits-app
 spec:
